<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true">

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightPrimary"
            android:orientation="vertical">

            <View
                android:id="@+id/iv_background_header"
                android:layout_width="match_parent"
                android:layout_height="250dp"

                />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="128dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="32sp"
                tools:text="Inception" />

            <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_centerHorizontal="true"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="italic"
                tools:text="@string/original_title_scheme" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_original_title"
                android:layout_centerHorizontal="true"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="@string/year_and_length_scheme" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_genre"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/ic_rating"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                tools:text="7.3" />


            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_budget"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                tools:text="@string/genre_schema" />

            <TextView
                android:id="@+id/tv_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_country"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                tools:text="@string/budget_schema" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_background_header"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/production_countries_schema"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <!-- image scroller? -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_background_header"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:scrollbars="vertical"
                    tools:text="@string/story_schema" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/image_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
